--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ src/se/ludrik/snappyj/SnappyJavaLexer.java
 src/se/ludrik/snappyj/SnappyJavaLexer.tokens
 src/se/ludrik/snappyj/SnappyJavaParser.java
 src/se/ludrik/snappyj/SnappyJavaVisitor.java
+
+ludwig_test.java
