--- a/build.xml
+++ b/build.xml
@@ -17,10 +17,11 @@
   <!-- clean target -->
   <target name="clean">
     <delete dir="${build.dir}"/>
+    <delete dir="output"/>
   </target>
 
   <!-- antlr4 target -->
-  <!--<target name="antlr">
+  <target name="antlr">
     <java jar="lib/antlr-4.2-complete.jar" fork="true" failonerror="true">
       <arg value="-package" />
       <arg value="se.ludrik.snappyj.antlr" />
@@ -30,7 +31,7 @@
       <arg value="-visitor" />
       <arg value="SnappyJava.g4" />
     </java>
-  </target>-->
+  </target>
 
   <!-- compile target -->
   <!--<target name="compile" depends="antlr">-->
